# lazynote

./: .commitlintrc.mjs  .gitignore  .prettierignore  .prettierrc.mjs  .stylelintrc.mjs  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: icon.md
public/static/js/: preload.js
scripts/plugins/perprocess/: copyFile.ts
scripts/plugins/utils/: fastcopy.ts
scripts/utils/: icon.cjs
src/: App.tsx
src-rs/: Cargo.toml
src-rs/app/: Cargo.toml  Tauri.toml  build.rs
src-rs/app/capabilities/: plugins.json
src-rs/app/icons/: icon.icns
src-rs/app/src/: core.rs  invoke.rs  lib.rs  main.rs
src-rs/app/src/state/: app_state.rs  mod.rs
src-rs/common/: Cargo.toml
src-rs/common/src/: lib.rs
src-rs/common/src/commands/: mod.rs
src-rs/common/src/commands/body/: body.rs
src-rs/common/src/commands/commands/: commands.rs  commands_async.rs
src-rs/common/src/commands/context/: context.rs
src-rs/common/src/commands/handler/: from_command_args.rs  handler_async.rs
src-rs/common/src/commands/result/: result.rs
src-rs/core/: Cargo.toml
src-rs/core/src/: lib.rs
src-rs/core/src/api/: hello_command.rs  mod.rs
src-rs/libs/: Cargo.toml  libs.json
src-rs/libs/src/: lib.rs
src-rs/libs/src/os/: mod.rs  os.rs  plugin.rs
src-rs/libs/src/path/: path.rs  plugin.rs
src-rs/libs/src/store/: store.rs
src-rs/plugins/: Cargo.toml  plugins.json
src-rs/plugins/src/: lib.rs
src-rs/plugins/src/path/: path.rs
src-rs/plugins/src/store/: store.rs
src/assets/imgs/: logo.tsx
src/bindings/: index.ts  invoke.ts
src/bindings/api/: hello.ts
src/bindings/libs/: index.ts  os.ts
src/bindings/plugins/: path.ts
src/components/: Link.tsx  index.ts  languageSelect.tsx  themeSelect.tsx
src/config/: appConfig.ts  index.ts  os.ts
src/css/: index.scss
src/hooks/: index.ts
src/initialize/: index.ts  initWindow.ts
src/interface/: index.ts
src/interface/history/: index.ts
src/interface/workspace/: index.ts
src/libs/theme/: index.ts  themeJoy.tsx
src/models/: index.ts
src/models/history/: index.ts  types.ts
src/models/workspace/: index.ts  types.ts
src/pages/components/: fallback.tsx  layout.tsx
src/pages/test/: about.tsx  index.tsx
src/pages/workspace/: index.module.scss  index.tsx
src/router/: Router.tsx  createRouter.tsx  routes.ts
