[workspace]
members = ["app", "common", "libs", "core"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["luoluoqixi"]
repository = "https://github.com/lazynext/lazynote"
license = ""

[workspace.dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.89"
log = "0.4.22"

# tauri
tauri-build = { version = "2.0.1" }
tauri = { version = "2.0.1" }
specta = { version = "=2.0.0-rc.20" }
tauri-plugin-clipboard-manager = { version = "2.0.1" }
tauri-plugin-log = { version = "2.0.1" }
tauri-plugin-decorum = { version = "1.1.1" }

# tauri-plugin-updater = { version = "2.0.2" }
# tauri-plugin-dialog = { version = "2.0.1" }
# tauri-plugin-shell = { version = "2.0.1" }

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
