[package]
name = "lazynote"
description = "LazyNote"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
name = "lazynote_lib"
# crate-type = ["staticlib", "cdylib", "rlib", "lib"]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "lazynote"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = ["config-toml"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dependencies]
lazynote_plugins = { path = "../plugins" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

# tauri
tauri = { workspace = true, features = ["config-toml"] }
specta = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-decorum = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-os = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Optimize for smaller binary size
[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Remove debug symbols
